--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "external/Fortran_Reallocate"]
 	path = external/Fortran_Reallocate
-	url = https://github.com/SpinTensor/Fortran_Reallocate
+	url = ../Fortran_Reallocate
 [submodule "external/cmd_option_parser"]
 	path = external/cmd_option_parser
-	url = https://github.com/SpinTensor/cmd_option_parser
+	url = ../cmd_option_parser
